--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <p>The all-in-one Discord bot for moderation, fun, and server management</p>
     <div class="btns">
       <a href="https://discord.com/oauth2/authorize?client_id=1378736388253683823&permissions=8&integration_type=0&scope=bot+applications.commands">bot invite</a>
-        <a href="https://discord.gg/TQ8gYgSRud">join discord server</a>
+        <a href="https://discord.gg/8vHrh7qamr">join discord server</a>
     </div>
   </header>
 
